# animec

./: .gitignore  pyproject.toml
animec/: anicore.py
