[project]
name = "animec"
version = "0.4.2"
description = "A module to get data about anime characters, news, info, lyrics and more."
readme = "README.md"
authors = [{ name = "Shravan Asati", email = "dev.shravan@proton.me" }]
license = { text = "MIT" }
keywords = [
    "animecharacter",
    "anime",
    "character",
    "myanimelist",
    "news",
    "animenews",
    "animeinfo",
    "music",
    "animelyrics",
    "lyrics",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Education :: Testing",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["beautifulsoup4>=4.9.3", "urllib3>=1.25.9"]

[project.urls]
# "Documentation" = "https://animec.readthedocs.io/en/latest/"
"Issue tracker" = "https://github.com/shravanasati/animec/issues"
"Github" = "https://github.com/shravanasati/animec"

[tool.uv]
package = true
